--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
