--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "egypt-game",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://m-ox.github.io/egypt-game/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
