--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "node-sass": "^7.0.1",
+    "node-sass": "^8.0.0",
     "random": "^3.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.49.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.59.3",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^3.2.3",
-    "vite": "^2.8.0"
+    "vite": "^4.2.0"
   }
 }
